--- a/about-poe.html
+++ b/about-poe.html
@@ -33,9 +33,9 @@
 
         <h2>Share This!</h2>
         <ul>
-            <li><a class="twitter" href="http://twitter.com">Twitter</a></li>
-            <li><a class="facebook" href="http://facebook.com">Facebook</a></li>
-            <li><a class="pinterest" href="http://pinterest.com">Pinterest</a></li>
+            <li><a class="twitter" href="http://twitter.com"><img src="social_media_icons_gray_icons_set_32x32_0002_twitter.png"></a></li>
+            <li><a class="facebook" href="http://facebook.com"><img src="social_media_icons_gray_icons_set_32x32_0000_facebook.png"></a></li>
+            <li><a class="pinterest" href="http://pinterest.com"><img src="social_media_icons_gray_icons_set_32x32_0001_pinterest.png"></a></li>
         </ul>
     </aside>
     <section id="content">       
