--- a/interpretation.html
+++ b/interpretation.html
@@ -11,21 +11,21 @@
     <header>
         <h1>Sonnet: to Science</h1>
         <nav>
-            <ul class="top-nav"><!-- TODO: Make this list lay out horizontally. -->
+            <ul class="top-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about-poe.html">About Poe</a></li>
                 <li><a href="interpretation.html" class="active">Interpretation</a></li>
             </ul>
         </nav>
     </header>
-    <aside id="sidebar"><!-- TODO: Make sidebar float right. -->
+    <aside id="sidebar">
         <h2>Summary</h2>
         <p>Poe asks why science preys on the poet. Science is peering, destructive and interested only in cold realities. It will not allow the poet to soar in fantasy or even to sit peacefully dreaming beneath a tree.<sup><a href="#citation-1">1</a></sup></p>
         <h2>Share This!</h2>
         <ul>
-            <li><a class="twitter" href="http://twitter.com">Twitter</a></li>
-            <li><a class="facebook" href="http://facebook.com">Facebook</a></li>
-            <li><a class="pinterest" href="http://pinterest.com">Pinterest</a></li>
+            <li><a class="twitter" href="http://twitter.com"><img src="social_media_icons_gray_icons_set_32x32_0002_twitter.png"></a></li>
+            <li><a class="facebook" href="http://facebook.com"><img src="social_media_icons_gray_icons_set_32x32_0000_facebook.png"></a></li>
+            <li><a class="pinterest" href="http://pinterest.com"><img src="social_media_icons_gray_icons_set_32x32_0001_pinterest.png"></a></li>
         </ul>
     </aside>
     <section id="content">
@@ -48,7 +48,7 @@
     </section>
     <footer>
         <nav>
-            <ul class="bottom-nav"><!-- TODO: Make this list horizontal. -->
+            <ul class="bottom-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about-poe.html">About Poe</a></li>
                 <li><a href="interpretation.html" class="active">Interpretation</a></li>
